fixed mobile overflow-x, fixed minTickGap

--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -33,6 +33,8 @@
 
   .main {
     overflow-y: visible;
+    overflow-x: hidden;
+
   }
   .title {
     text-align: center;
